# michelson-interferometer

./: .gitignore  AppImageBuilder.yml  Makefile  README.md  appimage-requirements.txt  build-appimage.sh  michelson-interferometer.py  michelson_interferometer.py  pyproject.toml
flatpak/: 01_pkgconfig_libusb.diff  ca.maxchernoff.michelson_interferometer.desktop  ca.maxchernoff.michelson_interferometer.metainfo.xml  ca.maxchernoff.michelson_interferometer.yaml  michelson-interferometer.sh  python-modules.yaml  user-flatpak.sh
michelson_interferometer/: devices.py  devices_mock.py  gui.blp  gui.py  gui.ui  main.blp  plots.py  spectral_colours.py  utils.py
