# Michelson Interferometer Control Software
# https://github.com/gucci-on-fleek/michelson-interferometer
# SPDX-License-Identifier: MPL-2.0+
# SPDX-FileCopyrightText: 2025 Max Chernoff

[project]
name = "michelson-interferometer"
license = "MPL-2.0+"
authors = [{ name = "Max Chernoff" }]
version = "0"

dependencies = [
    "pylablib-lightweight[extra, devio] ~= 1.4",
    "PyGObject ~= 3.50",
    "pycairo ~= 1.25",
]

[build-system]
requires = ["pygobject-stubs ~= 2.13", "setuptools >= 40.8"]


[tool.black]
line-length = 80
target-version = ["py313"]
preview = true


[tool.setuptools]
py-modules = ["michelson_interferometer"]


[project.scripts]
michelson-interferometer = "michelson_interferometer:main"
