# Michelson Interferometer Control Software
# https://github.com/gucci-on-fleek/michelson-interferometer
# SPDX-License-Identifier: MPL-2.0+
# SPDX-FileCopyrightText: 2025 Max Chernoff

[project]
name = "michelson-interferometer"
license = "MPL-2.0+"
authors = [{ name = "Max Chernoff" }]
version = "0"

dependencies = [
    "matplotlib ~= 3.10",
    "pycairo ~= 1.11",
    "PyGObject ~= 3.42",
    "pylablib-lightweight[extra, devio] ~= 1.4",
]

[build-system]
requires = ["pygobject-stubs ~= 2.13", "setuptools >= 40.8"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 80
target-version = ["py313"]
preview = true


[tool.setuptools.packages.find]
where = ["."]
include = ["michelson_interferometer"]
namespaces = false


[tool.setuptools.package-data]
michelson_interferometer = ["*.ui"]


[project.scripts]
michelson-interferometer = "michelson_interferometer:gui.main"
