# Michelson Interferometer Control Software
# https://github.com/gucci-on-fleek/michelson-interferometer
# SPDX-License-Identifier: MPL-2.0+
# SPDX-FileCopyrightText: 2025 Max Chernoff

[project]
name = "michelson-interferometer"
license = "MPL-2.0+"
authors = [{ name = "Max Chernoff" }]
version = "0"

dependencies = [
    "matplotlib ~= 3.10",
    "pylablib-lightweight[extra, devio] ~= 1.4",
    "polars ~= 1.34.0",
]

[project.optional-dependencies]
dev = ["pygobject-stubs ~= 2.13.0 "]
gtk = ["pycairo == 1.28.0", "PyGObject == 3.52.3"]

[build-system]
requires = ["setuptools == 80.9.0"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 80
target-version = ["py312"]
preview = true


[tool.isort]
profile = "black"
line_length = 80
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "LOCALFOLDER", "GTK"]
known_gtk = ['gi']


[tool.setuptools.packages.find]
where = ["."]
include = ["michelson_interferometer"]
namespaces = false


[tool.setuptools.package-data]
michelson_interferometer = ["*.ui"]


[project.scripts]
michelson-interferometer = "michelson_interferometer:gui.main"
